manifests/HeadlessService.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-headless
  namespace: argocd
spec:
  clusterIP: None    
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
